<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HoroscopeActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/linearTextOne"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/onToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signName"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30sp"/>
    </RelativeLayout>
    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/color"
    android:layout_below="@+id/linearTextOne"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/color"
    android:textStyle="bold"
    android:textAllCaps="false"
    android:textColor="#000000"
    android:textSize="30sp"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        android:layout_below="@+id/color"
        android:text="@string/number"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mood"
        android:layout_below="@+id/number"
        android:text="@string/mood"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mood"
        android:id="@+id/time"
        android:text="@string/time"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_below="@+id/time"
        android:text="@string/description"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"/>

</RelativeLayout>